--- a/index2.html
+++ b/index2.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <title>锴琳生日快乐</title>
   <script src="http://g.tbcdn.cn/kissy/k/1.4.1/seed-min.js"></script>
   <script src="./seed.js"></script>
