--- a/index2.html
+++ b/index2.html
@@ -2,9 +2,8 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <title>锴琳生日快乐</title>
-  <script src="http://g.tbcdn.cn/kissy/k/1.4.1/seed-min.js"></script>
+  <script src="http://g.alicdn.com/kissy/k/1.4.8/seed-min.js"></script>
   <script src="./seed.js"></script>
   <link rel="stylesheet" href="css/style.css">
 
