--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-  <!--<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"> -->
   <title>锴琳生日快乐</title>
   <script src="http://g.alicdn.com/kissy/k/1.4.8/seed-min.js"></script>
   <script src="./seed.js"></script>
@@ -109,11 +108,11 @@
   <a href="javascript:;" class="huaqifont">&#x3482;</a>
   <del></del>
 </div>
-<div class="circle circle--two circle-abs circle-share">
-    <a href="./dist/index.html" target="_blank" title="打开锴琳的新手机" class="huaqifont">&#x3449;</a>
-</div>
-</div>
 
+<div id="C-share" class="circle circle--two circle-abs circle-share">
+  <a href="./dist/index.html" target="_blank" title="打开锴琳的新手机" class="huaqifont">&#x3449;</a>
+</div>
+</div>
 <script>
 
 window.requestAnimationFrame = window.requestAnimationFrame || window.mozRequestAnimationFrame || window.webkitRequestAnimationFrame || window.msRequestAnimationFrame
