--- a/BirthdayCake.html
+++ b/BirthdayCake.html
@@ -13,7 +13,6 @@
 </head>
 
 <body>
-
 <div class="bg">
     <div class="velas">
         <div class="fuego"></div>
@@ -184,7 +183,7 @@
     </a>
 </div>
 <div class="button-style2">
-	<a href="index2.html" class="lk1">
+	<a href="./phone.html" class="lk1">
         <div class="link1">
             <div class="bt1">
                 一般般啦
