--- a/phone.html
+++ b/phone.html
@@ -3,17 +3,19 @@
 <head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="applicable-device" content="pc,mobile">
+<meta http-equiv="Cache-Control" content="no-transform ">
 <title>Happy Birthday</title>
 <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
 <div class="htmleaf-container">
-    <div class="wrapper">
-        <div style="position:absolute;left:40%;top:30%">
+	<div class="wrapper">
+		<div class="container">
             <a href="./dist/index.html">
                 <img  src="./img/getphone.png">
             </a>
+            <h1>↑↑点图片↑↑</h1>
         </div>
     </div>
 </div>
