--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="htmleaf-container">
 	<div class="wrapper">
 		<div class="container">
-			<h1>锴琳查收生日礼物~</h1>
+			<h1>欣宝查收生日礼物~</h1>
 
 			<form class="form">
 				<input id="userName" name="userName" type="text" placeholder="姓名">
