--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-  <title>锴琳生日快乐</title>
+  <title>欣宝生日快乐</title>
   <script src="http://g.alicdn.com/kissy/k/1.4.8/seed-min.js"></script>
   <script src="./seed.js"></script>
   <link rel="stylesheet" href="css/style.css">
@@ -110,7 +110,7 @@
 </div>
 
 <div id="C-share" class="circle circle--two circle-abs circle-share">
-  <a href="./dist/index.html" target="_blank" title="打开锴琳的新手机" class="huaqifont">&#x3449;</a>
+  <a href="./dist/index.html" target="_blank" title="打开雨欣的新手机" class="huaqifont">&#x3449;</a>
 </div>
 </div>
 <script>
