--- a/BirthdayCake.html
+++ b/BirthdayCake.html
@@ -169,7 +169,7 @@
     </path>
     <rect x="10" y="475.571" fill="#fefae9" width="180" height="4" />
 </svg>
-<div class="name" style="z-index: 100;">锴琳</div>
+<div class="name" style="z-index: 100;">欣宝</div>
 <div class="happy" style="z-index: 100;">
     <img src="img/HappyBirthday.png">
 </div>
