--- a/index2.html
+++ b/index2.html
@@ -19,7 +19,7 @@
 <pre id="show" style="color:green;position:relative;"></pre>
 <pre id="flower7" style="display:none;">
                                                 ....... ................................................................................... .
-                                                                  <span style="color:#ddd;">简简单单的快落 --- CanftIn . .</span>
+                                                                  <span style="color:#ddd;">我欣宝今天要超级开心 --- can . .</span>
                            :vr   .rur,         . ........
                           .q@0.   LFL,          . . . . .
                           r@B@7::LkGkjr;;77vr:.. . . . ..
@@ -110,6 +110,7 @@
 </div>
 
 <div id="C-share" class="circle circle--two circle-abs circle-share">
+  <a target="_blank" title="打开雨欣的新手机" class="huaqifont">&#x3449;</a>
 </div>
 </div>
 <script>
